--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /* 基本設定 */
 html {
-	font-family: sans-serif;
+	font-family: "Zen Kaku Gothic New";
 }
 
 html * {
@@ -173,3 +173,4 @@ img {
 
 
 }
+
